objects/AcctSeed__Financial_Report_Definition__c/AcctSeed__Financial_Report_Definition__c.object-meta.xml
<CustomObject>
    <description>Used to define reports which are aggregates of financial report columns and financial report rows.</description>
    <label>Financial Report Definition</label>
    <nameField>
        <label>Financial Report Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>