objects/AcctSeed__Financial_Report_Definition__c/fields/AcctSeed__Description__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>