objects/AcctSeed__Financial_Report_Definition__c/fields/AcctSeed__Number_of_Columns__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Number_of_Columns__c</fullName>
    <label>Number of Columns</label>
    <summaryForeignKey>AcctSeed__Financial_Report_Column__c.AcctSeed__Financial_Report_Definition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>