objects/AcctSeed__Financial_Report_Definition__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>